Se añadió la sección de bebidas al menú

--- a/index.html
+++ b/index.html
@@ -124,6 +124,12 @@
           >
             BURGERS
           </button>
+          <button
+            data-category="bebidas"
+            class="filter-btn bg-zinc-800 text-gray-400 flex-shrink-0"
+          >
+            BEBIDAS
+          </button>
         </div>
       </div>
 
